[BUG][MINOR] Fix scripts compatible with jdk8 & jdk11 (#798)
### What changes were proposed in this pull request?
Ignore unrecognized jvm options and use some gc options in jdk11 to replace that of jdk8

### Why are the changes needed?
When use jdk11, the startup scripts will fail 

### Does this PR introduce _any_ user-facing change?
No.

### How was this patch tested?
Just use jdk11 & jdk8 to startup the scripts without any failure